deployment/terraform/modules/k8s-addons/traefik/manifests/traefik-addon.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
  labels:
    k8s-app: traefik-haystack
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: traefik-ingress-controller
  template:
    metadata:
      labels:
        k8s-app:  traefik-ingress-controller
        name:  traefik-ingress-controller
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
      - name: config
        configMap:
          name: traefik-ingress-controller
      containers:
      - image: traefik:v1.3.7
        name: traefik-ingress-controller
        livenessProbe:
          tcpSocket:
            port: 80
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
         - mountPath: /config
           name: config
        resources:
          limits:
            memory: 100Mi
          requests:
            memory: 50Mi
        ports:
        - containerPort: 80
        - containerPort: 8080
        - containerPort: 443
        args:
        - --configfile=/config/traefik.toml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress-controller
  namespace: kube-system
spec:
  type: NodePort
  ports:
  - port: 80
    name: http
  - port: 443
    name: https

    targetPort: 80

    nodePort: 32300
  selector:
    k8s-app: traefik-ingress-controller
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-haystack-metrictank
  namespace: haystack-apps
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: haystack.local
    http:
      paths:
       - path: /metrictank
         backend:
           serviceName: metrictank
           servicePort: 6060
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-haystack-grafana
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
   - host: haystack.local
     http:
        paths:
         - path: /grafana
           backend:
             serviceName: monitoring-grafana
             servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-haystack-ui
  namespace: haystack-apps
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: haystack.local
    http:
      paths:
       - path: /
         backend:
           serviceName: haystack-ui
           servicePort: 8080
